--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
       <div class="content">
         <p>
-          <strong>Artificial Life</strong> draws inspiration from natural systems — <strong>evolution</strong>, <strong>development</strong>, <strong>ecology</strong>, <strong>collective behaviour</strong> — and explores <strong>life-as-it-could-be</strong> to understand how <strong>complexity</strong> and <strong>intelligence</strong> emerge. Yet as a field, it rarely feeds back into the very natural systems that inspired it. This disconnect represents a missed opportunity: <strong>ALife</strong> has the potential to transform how we model, explore, and collectively organize scientific discovery.
+          <strong>Artificial Life</strong> draws inspiration from natural systems — <strong>evolution</strong>, <strong>development</strong>, <strong>ecology</strong>, <strong>collective behaviour</strong> — and explores <strong>life-as-it-could-be</strong> to understand how <strong>complexity</strong> and <strong>intelligence</strong> emerge. Yet as a field, it rarely feeds back into the real-world systems that inspired it. This disconnect represents a missed opportunity: <strong>ALife</strong> has the potential to transform how we model, explore, and collectively organize scientific discovery.
         </p>
 
         <p>
@@ -356,7 +356,7 @@
 
         <div class="section">
           <p>
-            <strong>As a tool for assisting human scientific discovery:</strong> <strong>Research in evolutionary search, intrinsic motivation and open-endedness</strong> has the potential of offering tools and theories for assisting human discovery, for example by automating search in open-ended spaces <span class="citation">[Reinke et al., 2020]</span> and helping analyze and coordinate our <strong>innovation networks</strong>. The importance of mechanisms for open-endedness is becoming increasingly important in our era of <strong>Generative AI</strong>, where such ideas are becoming increasingly incorporated in tools for automating scientific discovery <span class="citation">[Cui et al., 2021; Lange et al., 2025]</span>.
+            <strong>As a tool for assisting human scientific discovery:</strong> <strong>Research in evolutionary search, intrinsic motivation and open-endedness</strong> has the potential of offering tools and theories for assisting human discovery, for example by automating search in open-ended spaces <span class="citation">[Reinke et al., 2020]</span> and helping analyze and coordinate our <strong>innovation networks</strong>. The importance of mechanisms for open-endedness is becoming increasingly evident in our era of <strong>Generative AI</strong>, where such ideas are being incorporated into tools for automating scientific discovery <span class="citation">[Cui et al., 2021; Lange et al., 2025]</span>.
           </p>
         </div>
 
